--- a/app/views/layouts/admin/_body.html.haml
+++ b/app/views/layouts/admin/_body.html.haml
@@ -1,11 +1,5 @@
-= javascript_tag nonce: true, "data-turbolinks-track": "reload", "data-turbolinks-eval": true do
-  window.__initStore__ = {}
-  - if content_for? :store
-    window.__initStore__ = #{ raw content_for(:store) }
-
-= render partial: "layouts/admin/sidebar"
-
-= render partial: "layouts/admin/navbar"
+= render "layouts/admin/navbar"
+= render "layouts/admin/mobile_nav"
 
 .ui.pusher.main
   .messages
