Update markup for styles. New service announcements & pagination looks

--- a/app/views/bookmarks/edit.html.haml
+++ b/app/views/bookmarks/edit.html.haml
@@ -7,6 +7,6 @@
       %i.chevron.left.icon
       Back to bookmark
 
-%h2.ui.dividing.header Editing Bookmark
+%h2.dividing Editing Bookmark
 
 = render partial: "form", locals: { bookmark: @bookmark }
