--- a/app/views/bookmarks/new.html.haml
+++ b/app/views/bookmarks/new.html.haml
@@ -7,6 +7,6 @@
       %i.chevron.left.icon
       Back to bookmarks
 
-%h2.ui.dividing.header New Bookmark
+%h2.dividing New Bookmark
 
 = render partial: "form", locals: { bookmark: @bookmark }
