--- a/app/views/layouts/common/_mobile_nav.html.haml
+++ b/app/views/layouts/common/_mobile_nav.html.haml
@@ -1,5 +1,5 @@
 // Mobile nav
-.ui.top.fixed.inverted.menu.mobile.only
+%nav.tb.navbar.ui.top.fixed.inverted.menu.mobile.only
   .clickable.item
     %i.large.sidebar.icon
 
