--- a/app/views/layouts/common/_navbar.html.haml
+++ b/app/views/layouts/common/_navbar.html.haml
@@ -2,7 +2,7 @@
   = render partial: "navbar"
 
 // Desktop nav
-.ui.top.fixed.inverted.menu.responsive.mobile.hidden
+%nav.tb.navbar.ui.top.fixed.inverted.menu.responsive.mobile.hidden
   = link_to root_path, class: "header item" do
     = image_tag "bug_logo.png", class: "logo"
     transientBug
