--- a/app/views/components/_bookmark_card.html.haml
+++ b/app/views/components/_bookmark_card.html.haml
@@ -1,4 +1,3 @@
-
 .tb.bookmark-card
   .tb.card-menu
     = yield
@@ -17,7 +16,7 @@
       - unless bookmark.description.blank?
         = bookmark.description.truncate(80)
       - else
-        %em No description
+        %em No description ...
 
     .tb.card-footer
       = render "components/time", time: bookmark.created_at
