--- a/app/views/layouts/common/_service_announcements.html.haml
+++ b/app/views/layouts/common/_service_announcements.html.haml
@@ -22,7 +22,7 @@
             #{ service_announcement.message }
 
     .tb.service-announcement
-      .announcement-icon{ class: "bg-#{ service_announcement.color }-800" }
+      .announcement-icon{ class: "bg-#{ service_announcement.color }-800 service-announcement-bg-#{ service_announcement.color }" }
         %i.icon{ class: [ service_announcement.icon ] }
 
       .announcement-body
