--- a/app/views/admin/service_announcements/index.html.haml
+++ b/app/views/admin/service_announcements/index.html.haml
@@ -17,66 +17,81 @@
           delete all
 
 
+
 %table.ui.celled.table
   %thead
     %tr
       %th= select_all_checkbox
       %th Actions
-      %th ID
-      %th Title
-      %th Message
-      %th Active?
-      %th Effective During
-      %th Created At
+      %th Preview
 
   %tbody
     - if @service_announcements.any?
       - @service_announcements.each do |service_announcement|
         %tr
           %td.collapsing= model_tag service_announcement, only: [ :id, :title ]
+
           %td.collapsing
-            .ui.buttons
-              = link_to admin_service_announcement_path(service_announcement), class: "ui icon button" do 
-                %i.expand.icon
-                view
+            .flex.flex-col.items-center
+              .ui.buttons
+                = link_to admin_service_announcement_path(service_announcement), class: "ui icon button" do 
+                  %i.expand.icon
+                  View
 
-              .ui.simple.dropdown.icon.button
-                %i.dropdown.icon
-                .menu
-                  = link_to edit_admin_service_announcement_path(service_announcement), class: "item" do
-                    %i.edit.icon
-                    edit
+                .ui.simple.dropdown.icon.button
+                  %i.dropdown.icon
+                  .menu
+                    = link_to edit_admin_service_announcement_path(service_announcement), class: "item" do
+                      %i.edit.icon
+                      Edit
 
-                  = link_to admin_service_announcement_toggle_index_path(service_announcement), class: "item", method: :post do
-                    - if service_announcement.active
-                      %i.hide.icon
-                      deactivate
-                    - else
-                      %i.unhide.icon
-                      activate
+                    .divider
+                    .header
+                      %i.warning.sign.icon
+                      DANGERZONE
 
-                  .divider
-                  .header
-                    %i.warning.sign.icon
-                    DANGERZONE
+                    = modal_tag service_announcement, :delete, url: admin_service_announcement_path(service_announcement) do
+                      %i.trash.icon
+                      Delete
 
-                  = modal_tag service_announcement, :delete, url: admin_service_announcement_path(service_announcement) do
-                    %i.trash.icon
-                    delete
+              = button_to admin_service_announcement_path(service_announcement), method: :patch, params: { service_announcement: { active: !service_announcement.active } }, class: "button button-gray-outline hover:button-gray" do
+                - if service_announcement.active
+                  %i.hide.icon
+                  Deactivate
+                - else
+                  %i.unhide.icon
+                  Activate
 
-          %td.collapsing= service_announcement.id
-          %td= service_announcement.title
-          %td= service_announcement.message&.truncate(240)
-          %td.collapsing= service_announcement.active
-          %td.collapsing
-            = service_announcement.start_at&.to_s(:long)
-            \-
-            = service_announcement.end_at&.to_s(:long)
-          %td.collapsing= service_announcement.created_at.to_s(:long)
+              = service_announcement.created_at.to_s(:long)
+
+          %td
+            .flex.flex-col
+              = render "components/service_announcement", service_announcement: service_announcement
+              .flex.flex-row.justify-between.items-baseline
+                .flex.flew-row
+                  %strong.mr-1 Active?
+
+                  - if service_announcement.active
+                    %i.green.unhide.icon
+                    active
+                  - else
+                    %i.red.hide.icon
+                    inactive
+
+                .flex.flex-row
+                  %strong.mr-1 Active during:
+                  - if service_announcement.start_at
+                    = service_announcement.start_at.to_s(:long)
+                  - else
+                    No Start
+                  \-
+                  - if service_announcement.end_at
+                    = service_announcement.end_at.to_s(:long)
+                  - else
+                    No End
 
     - else
-      %tr
-        %td{ colspan: 7 }
-          No service announcements made yet
+      %h2 Nothing here
+      %p No service announcements made yet
 
 = paginate @service_announcements
