--- a/app/views/bookmarks/index.html.haml
+++ b/app/views/bookmarks/index.html.haml
@@ -7,35 +7,15 @@
 
 - content_for :sidebar do
   - if @bookmarks.any?
-    .tb.bulk-action-menu
-      = react_component "BulkActions/SelectAll", label: "Select All Bookmarks"
-
-      = behavior_data "bulk-action-visibility" do |vis_dataset|
-        .hidden{ **vis_dataset }
-          %h2
-            Bulk Actions
-            %small
-              (
-              = behavior_data "bulk-action-count" do |dataset|
-                %span{ **dataset }
-              selected bookmarks )
-
-          = behavior_data "display-modal", modal: "TagAll", actionUrl: bookmarks_bulk_tag_path, autocompleteUrl: bookmarks_autocomplete_index_path do |dataset|
-            %button{ class: "button button-white-outline hover:button-white text-white hover:text-gray-800", **dataset }
-              %i.tags.icon
-              Add Tags
-
-          = behavior_data "display-modal", modal: "DeleteAll", actionUrl: bookmarks_bulk_delete_path do |dataset|
-            %button{ class: "button button-red-outline hover:button-red text-red hover:text-white", **dataset }
-              %i.trash.icon
-              Delete All
+    = render "bookmarks/bulk-actions"
 
 - if @bookmarks.any?
   = paginate @bookmarks
 
   - @bookmarks.each do |bookmark|
     = render "components/bookmark_card", bookmark: bookmark do
-      = react_component "BulkActions/SelectSingle", id: bookmark.id
+      = behavior_data "bulk-action-select-single", id: bookmark.id do |dataset|
+        = render "components/checkbox", dataset: dataset
 
   = paginate @bookmarks
 
