--- a/app/views/components/_checkbox.html.haml
+++ b/app/views/components/_checkbox.html.haml
@@ -1,8 +1,11 @@
 - dataset ||= {}
 - clipId = "_clip-#{ SecureRandom.uuid }"
 
+- label = yield
+- has_label = label.present?
+
 %label{ class: "flex justify-start items-start", **dataset }
-  %div{ class: "border border-gray-600 rounded w-6 h-6 flex flex-shrink-0 justify-center items-center focus-within:border-blue-500 mr-2" }
+  %div{ class: "border border-gray-600 rounded w-6 h-6 flex flex-shrink-0 justify-center items-center focus-within:border-blue-500 #{ has_label ? "mr-2" : "" }" }
     %input{ type: :checkbox, class: "opacity-0 absolute", autocomplete: "off" }
 
     %svg{ class: "fill-current w-4 h-4 text-gray-600 pointer-events-none inverted", viewBox: "0 0 20 20" }
@@ -12,5 +15,5 @@
       %g{ clip: { path: "url(##{ clipId })" } }
         %path{ d: "M20,3.5c0,-1.932 -1.568,-3.5 -3.5,-3.5l-13,0c-1.932,0 -3.5,1.568 -3.5,3.5l0,13c0,1.932 1.568,3.5 3.5,3.5l13,0c1.932,0 3.5,-1.568 3.5,-3.5l0,-13Z" }
 
-  - if block_given?
-    %div{ class: "select-none" }= yield
+  - if has_label
+    %div{ class: "select-none" }= label
