remove authorization and search tables, omni-auth session items
adjust logster and several other items for better dev experience

--- a/app/views/admin/home/home.html.haml
+++ b/app/views/admin/home/home.html.haml
@@ -34,4 +34,5 @@
 
     .ui.list
       = link_to "sidekiq", sidekiq_web_path, data: { turbolinks: false }, class: "item"
-      = link_to "logster", logster_web_path, data: { turbolinks: false }, class: "item"
+      - if Rails.env.production?
+        = link_to "logster", logster_web_path, data: { turbolinks: false }, class: "item"
