--- a/app/views/layouts/admin/_mobile_nav.html.haml
+++ b/app/views/layouts/admin/_mobile_nav.html.haml
@@ -45,7 +45,8 @@
 
   .menu
     = active_link_to "sidekiq", sidekiq_web_path, data: { turbolinks: false }, class: "item"
-    = active_link_to "logster", logster_web_path, data: { turbolinks: false }, class: "item"
+    - if Rails.env.production?
+      = active_link_to "logster", logster_web_path, data: { turbolinks: false }, class: "item"
 
   = content_for :sidebar
 
