--- a/app/views/admin/home/_navbar.html.haml
+++ b/app/views/admin/home/_navbar.html.haml
@@ -1,7 +1,7 @@
 - content_for :navbar_center do
-  %span.search
-    %input{ type: "search", role: "search", placeholder: "Search roles ..." }
+  %span.searchbar( class="relative w-full inline-block" )
+    %input.searchbar__input{ type: "search", role: "search", placeholder: "Search site features ...", class: "w-full bg-red-800 text-sm text-white border border-transparent rounded py-1 px-2 pr-10 appearance-none leading-normal shadow-inner focus:outline-none focus:border-gray-100" }
 
-    .search-icon
-      %svg{ class: "fill-current pointer-events-none text-white w-4 h-4", viewBox: "0 0 20 20" }
+    .searchbar__right
+      %svg{ class: "searchbar__icon", viewBox: "0 0 20 20" }
         %path{ d: "M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z" }
