--- a/app/views/admin/home/home.html.haml
+++ b/app/views/admin/home/home.html.haml
@@ -1,37 +1,21 @@
-- content_for :page_title do
-  Home
+- content_for :page_title, "Home"
 
-.ui.padded.equal.width.stackable.grid
-  .column
-    %h2.dividing.header general admin
+%h2 General Admin
 
-    .ui.list
-      = link_to "service announcements", admin_service_announcements_path, class: "item"
-      = link_to "oauth applications", admin_applications_path, class: "item"
+= link_to "Service Announcements", admin_service_announcements_path
+= link_to "Oauth Applications", admin_applications_path
 
-  .column
-    %h2.dividing.header user admin
+%h2 User Admin
 
-    .ui.list
-      = link_to "invitations", admin_invitations_path, class: "item"
-      = link_to "roles", admin_roles_path, class: "item"
-      = link_to "users", admin_users_path, class: "item"
+= link_to "Invitations", admin_invitations_path
+= link_to "Roles", admin_roles_path
+= link_to "Users", admin_users_path
 
-  .column
-    %h2.dividing.header bookmark related
+%h2 Bookmark Related
 
-    .ui.list
-      = link_to "bookmarks", admin_bookmarks_path, class: "item"
+= link_to "Bookmarks", admin_bookmarks_path
 
-  .column
-    %h2.dividing.header image related
+%h2 Misc
 
-    .ui.list
-      .item "Coming Soon"
-
-  .column
-    %h2.dividing.header misc dev
-
-    .ui.list
-      = link_to "sidekiq", sidekiq_web_path, data: { turbolinks: false }, class: "item"
-      = link_to "logster", logster_web_path, data: { turbolinks: false }, class: "item"
+= link_to "Sidekiq", sidekiq_web_path, data: { turbolinks: false }
+= link_to "Logster", logster_web_path, data: { turbolinks: false }
