--- a/app/views/layouts/admin-tailwind.html.haml
+++ b/app/views/layouts/admin-tailwind.html.haml
@@ -12,17 +12,19 @@
 
     = render partial: "layouts/admin-tailwind/navbar"
 
-    .content-and-sidebar
-      = render partial: "layouts/admin-tailwind/sidebar"
+    %header( class="bg-white shadow" )
+      %div( class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8" )
+        %h2( class="text-3xl font-bold leading-tight text-gray-900" )
+          = content_for :page_title
 
-      %section.content
-        = render_service_announcements
+    %main
+      %div( class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8" )
+        %div( class="px-4 py-6 sm:px-0" )
+          = render_service_announcements
 
-        - flash.each do |type, message|
-          .flash{ class: [type], role: "alert" }= message
+          - flash.each do |type, message|
+            .flash{ class: "flash--#{ type }", role: "alert" }= message
 
-        %header.header
-          %h3= content_for :page_title
+          %div( class="border-4 border-dashed border-gray-200 rounded-lg h-96" )
 
-        %main.main
           = yield
