--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,63 +1,67 @@
-- content_for :page_title do
-  Users
+- content_for :page_title, "Users"
+- content_for :page_header, "Users"
 
-- content_for :menu do
-  .item.hidden{ data: { group: "bulk-edit-menu" } }
-    .divider
-    .header Bulk Actions
-    .menu
-      .item Nothing Here Yet
-      -#.item
-        .ui.fluid.icon.button
-          %i.hide.icon
-          disable all
-
-      -#.item
-        .ui.fluid.icon.negative.basic.button
-          %i.trash.icon
-          delete all
-
-%table.ui.celled.table
+%table( class="min-w-full leading-normal" )
   %thead
     %tr
-      %th= select_all_checkbox
-      %th Actions
-      %th ID
-      %th Username
-      %th Email
-      %th Created At
+      %th( class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider" ) User
+      %th( class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider" ) Roles
+      %th( class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider" ) Created At
+      %th( class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider" ) Actions
 
   %tbody
     - if @users.any?
       - @users.each do |user|
         %tr
-          %td.collapsing= model_tag user, only: [ :id, :username, :email ]
-          %td.collapsing
-            .ui.buttons
-              = link_to admin_user_path(user), class: "ui icon button" do 
-                %i.expand.icon
-                view
 
-              .ui.simple.dropdown.icon.button
-                %i.dropdown.icon
-                .menu
-                  .divider
-                  .header
-                    %i.warning.sign.icon
-                    DANGERZONE
+          %td( class="px-5 py-5 border-b border-gray-200 bg-white text-sm" )
+            %div( class="flex items-center" )
+              %div
+                %div( class="text-sm leading-5 font-medium text-gray-900" )= user.username
+                %div( class="text-sm leading-5 text-gray-500" )
+                  = user.id
+                  = user.email
 
-                  = link_to edit_admin_user_path(user), class: "item" do
-                    %i.edit.icon
-                    edit
+          %td( class="px-5 py-5 border-b border-gray-200 bg-white text-sm" )
+            = user.roles.map(&:name).join ", "
 
-          %td.collapsing= user.id
-          %td= user.username
-          %td= user.email
-          %td.collapsing= user.created_at.to_s(:long)
+          %td( class="px-5 py-5 border-b border-gray-200 bg-white text-sm" )= user.created_at.to_s(:long)
+
+          %td( class="px-5 py-5 border-b border-gray-200 bg-white text-sm" )
+            = link_to admin_user_path(user), class: "" do 
+              %i.expand.icon
+              View
+
+            -#.simple-dropdown
+              %button.simple-dropdown__trigger
+                %svg( viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="inline" )
+                  %line( x1="3" y1="12" x2="21" y2="12" )
+                  %line( x1="3" y1="6" x2="21" y2="6" )
+                  %line( x1="3" y1="18" x2="21" y2="18" )
+
+              %ul.simple-dropdown__menu
+                %li
+                  %h6.simple-dropdown__header DangerZone
+                %li= link_to "Edit", edit_admin_user_path(user), class: "simple-dropdown__link"
+                %li.simple-dropdown__divider
+                %li.simple-dropdown__item test
+
+            .dropdown.dropdown--hoverable
+              %button.dropdown__trigger
+                %svg( viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="inline" )
+                  %line( x1="3" y1="12" x2="21" y2="12" )
+                  %line( x1="3" y1="6" x2="21" y2="6" )
+                  %line( x1="3" y1="18" x2="21" y2="18" )
+
+              .dropdown__container.dropdown__container--closed
+                .dropdown__menu
+                  .dropdown__row
+                    %h6.dropdown__header DangerZone
+                    = link_to "Edit", edit_admin_user_path(user), class: "dropdown__link"
 
     - else
       %tr
-        %td{ colspan: 6 }
+        %td( class="px-5 py-5 border-b border-gray-200 bg-white text-sm" colspan="4" )
           No users yet (this might be a problem, yo)
 
 = paginate @users
