--- a/app/views/layouts/admin-tailwind.html.haml
+++ b/app/views/layouts/admin-tailwind.html.haml
@@ -13,9 +13,12 @@
     = render partial: "layouts/admin-tailwind/navbar"
 
     %header( class="bg-white shadow" )
-      %div( class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8" )
-        %h2( class="text-3xl font-bold leading-tight text-gray-900" )
-          = content_for :page_title
+      %div( class="lg:flex lg:items-center lg:justify-between mx-auto py-6 px-4 sm:px-6 lg:px-8" )
+        %div( class="flex-1 min-w-0" )
+          %h2( class="text-2xl font-bold leading-7 text-gray-900 sm:text-3xl sm:leading-9 sm:truncate" )
+            = content_for :page_header
+
+        %div( class="mt-5 flex lg:mt-0 lg:ml-4" )
 
     %main
       %div( class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8" )
@@ -25,6 +28,6 @@
           - flash.each do |type, message|
             .flash{ class: "flash--#{ type }", role: "alert" }= message
 
-          %div( class="border-4 border-dashed border-gray-200 rounded-lg h-96" )
+          -#%div( class="border-4 border-dashed border-gray-200 rounded-lg h-96" )
 
           = yield
