wip on more styling around page header, breadcrumbs and general index views

--- a/app/views/admin/home/_navbar.html.haml
+++ b/app/views/admin/home/_navbar.html.haml
@@ -1,6 +1,6 @@
 - content_for :navbar_center do
   %span.searchbar( class="relative w-full inline-block" )
-    %input.searchbar__input{ type: "search", role: "search", placeholder: "Search site features ...", class: "w-full bg-red-800 text-sm text-white border border-transparent rounded py-1 px-2 pr-10 appearance-none leading-normal shadow-inner focus:outline-none focus:border-gray-100" }
+    %input.searchbar__input{ type: "search", role: "search", placeholder: "Search site features ..." }
 
     .searchbar__right
       %svg{ class: "searchbar__icon", viewBox: "0 0 20 20" }
