--- a/app/javascript/styles/admin.css
+++ b/app/javascript/styles/admin.css
@@ -1,17 +1,17 @@
-@import "components/_buttons";
+/*@import "components/_buttons";*/
 @import "components/_checkbox";
-@import "components/_tables";
+/*@import "components/_tables";*/
 @import "components/_time";
 
-@import "components/_tags";
+/*@import "components/_tags";*/
 
-@import "components/_backgrounds";
-@import "components/_modal";
+/*@import "components/_backgrounds";*/
+/*@import "components/_modal";*/
 
-@import "components/_pager";
-@import "components/_bulk_action_menu";
-@import "components/_service_announcement";
-@import "components/_bookmark_card";
+/*@import "components/_pager";*/
+/*@import "components/_bulk_action_menu";*/
+/*@import "components/_service_announcement";*/
+/*@import "components/_bookmark_card";*/
 
 @tailwind base;
 @tailwind components;
@@ -24,6 +24,11 @@
   }
 }
 
+.layout__body {
+  @apply bg-gray-100;
+}
+
+.layout__main {}
 
 /*
  * ==============================================
@@ -31,7 +36,7 @@
  * ==============================================
  */
 .navbar {
-  @apply bg-red-600;
+  @apply bg-red-600 shadow-md;
 }
 
 .navbar__container {
@@ -102,6 +107,50 @@
 
 .navbar__button--active {
   @apply px-3 py-2 rounded-md text-sm font-medium leading-5 text-white bg-red-900 outline-none;
+}
+
+/*
+ * Specalized full width menu for small/mobile screens, ideal for
+ * faking an expanding navbar.
+ */
+.navbar__dropdown {
+  @apply dropdown;
+
+  position: inherit;
+}
+
+@screen lg {
+  .navbar__dropdown {
+    @apply dropdown relative;
+  }
+}
+
+.navbar__dropdown-container {
+  @apply dropdown__container w-screen rounded-none;
+
+  &:before {
+    display: none;
+  }
+}
+
+@screen lg {
+  .navbar__dropdown-container {
+    @apply dropdown__container;
+
+    &:before {
+      display: inherit;
+    }
+  }
+}
+
+.navbar__dropdown-menu {
+  @apply dropdown__menu rounded-none;
+}
+
+@screen lg {
+  .navbar__dropdown-menu {
+    @apply dropdown__menu;
+  }
 }
 
 /* Navbar search component
@@ -232,94 +281,118 @@
 }
 
 /*
- * Specalized full width menu for small/mobile screens, ideal for
- * faking an expanding navbar.
+ * Page Headers
  */
-.navbar__dropdown {
-  @apply dropdown;
 
-  position: inherit;
+.page-header {
+  @apply bg-white shadow flex flex-col;
 }
 
-@screen lg {
-  .navbar__dropdown {
-    @apply dropdown relative;
-  }
+.page-header__container {
+  @apply py-6 px-4;
 }
 
-.navbar__dropdown-container {
-  @apply dropdown__container w-screen rounded-none;
-
-  &:before {
-    display: none;
+@screen sm {
+  .page-header__container {
+    @apply px-6;
   }
 }
 
 @screen lg {
-  .navbar__dropdown-container {
-    @apply dropdown__container;
-
-    &:before {
-      display: inherit;
-    }
+  .page-header__container {
+    @apply px-8;
   }
 }
 
-.navbar__dropdown-menu {
-  @apply dropdown__menu rounded-none;
+.page-header__row {
+  @apply w-full;
+}
+
+@screen sm {
+  .page-header__row {
+    @apply;
+  }
 }
 
 @screen lg {
-  .navbar__dropdown-menu {
-    @apply dropdown__menu;
+  .page-header__row {
+    @apply flex items-center justify-between;
+  }
+}
+
+.page-header__main {
+  @apply flex-1 min-w-0;
+}
+
+.page-header__title {
+  @apply text-2xl font-bold leading-7 text-gray-900;
+}
+
+@screen sm {
+  .page-header__title {
+    @apply text-3xl leading-9 truncate;
+  }
+}
+
+.page-header__meta {
+  /*@apply ;*/
+}
+
+.page-header__actions {
+  @apply mt-2 flex;
+}
+
+@screen lg {
+  .page-header__actions {
+    @apply mt-0 ml-4;
   }
 }
 
 /*
- * A simplified dropdown requiring less markup and only having support for
- * hovering to open.
- *
- * DOESN'T LOOK GREAT, NOT USED ATM
+ * Breadcrumbs
  */
-.simple-dropdown {
-  @apply inline-block relative;
 
-  &:hover > .simple-dropdown__menu {
-    @apply block;
+.breadcrumbs {
+  @apply text-gray-500 mb-2;
+}
+
+.breadcrumbs__list {
+  @apply list-none p-0 inline-flex;
+}
+
+.breadcrumbs__item {
+  @apply flex items-center;
+
+  &:last-child {
+    @apply text-gray-700
   }
 }
 
-.simple-dropdown__trigger {
-  /*@apply bg-gray-300 text-gray-700 font-semibold py-2 px-4 rounded inline-flex items-center;*/
+/*
+ * Buttons
+ */
+@define-mixin button-colors $bg, $border, $text {
+  @apply bg-$(bg) text-$(text) border border-$(border);
 }
 
-.simple-dropdown__menu {
-  @apply dropdown__container mt-0 pt-1 hidden rounded-md;
+.button {
+  @apply inline-flex items-center px-4 py-2 border text-sm leading-5 font-medium rounded-md cursor-pointer transition duration-150 ease-in-out;
 
-  /*&:first-child {*/
-    /*@apply rounded-t-md;*/
-  /*}*/
+  @add-mixin button-colors transparent, transparent, gray-800;
 
-  /*&:last-child {*/
-    /*@apply rounded-b-md;*/
-  /*}*/
+  &:focus {
+    @apply outline-none shadow-outline border-blue-300;
+  }
 }
 
-.simple-dropdown__item {
-  @apply dropdown__link dropdown__menu rounded-none;
+.button--gray {
+  @add-mixin button-colors white, gray-300, gray-700;
+
+  &:hover {
+    @add-mixin button-colors gray-200, gray-300, gray-700;
+  }
 }
 
-.simple-dropdown__link {
-  @apply dropdown__link simple-dropdown__item;
-}
-
-.simple-dropdown__header {
-  @apply simple-dropdown__item dropdown__header;
-}
-
-.simple-dropdown__divider {
-  @apply dropdown__divider simple-dropdown__item p-0;
-}
 
 @tailwind utilities;
 
