--- a/app/views/admin/home/home.html.haml
+++ b/app/views/admin/home/home.html.haml
@@ -1,5 +1,7 @@
 - content_for :page_title, "Home"
-- content_for :page_header, "Home"
+
+- content_for :breadcrumbs do
+  = link_to "Home", admin_root_url, aria: { current: "page" }
 
 %h2( class="text-2xl font-bold leading-7 text-gray-900 sm:text-3xl sm:leading-9 sm:truncate" ) General Admin
 
