--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,67 +1,59 @@
-- content_for :page_title, "Users"
-- content_for :page_header, "Users"
+- content_for :page_title, "All Users"
 
-%table( class="min-w-full leading-normal" )
-  %thead
-    %tr
-      %th( class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider" ) User
-      %th( class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider" ) Roles
-      %th( class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider" ) Created At
-      %th( class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider" ) Actions
+- content_for :breadcrumbs do
+  = link_to "Home", admin_root_url
+  = link_to "Users", admin_users_url, aria: { current: "page" }
 
-  %tbody
-    - if @users.any?
-      - @users.each do |user|
-        %tr
+- content_for :page_actions do
+  = link_to "New", admin_users_url, class: "button button--gray"
 
-          %td( class="px-5 py-5 border-b border-gray-200 bg-white text-sm" )
-            %div( class="flex items-center" )
-              %div
-                %div( class="text-sm leading-5 font-medium text-gray-900" )= user.username
-                %div( class="text-sm leading-5 text-gray-500" )
-                  = user.id
-                  = user.email
+%ul( class="min-w-full leading-normal border-gray-300 rounded-md border shadow-sm bg-white" )
+  - if @users.any?
+    - @users.each do |user|
+      %li( class="px-5 py-5 border-b border-gray-300 text-sm" )
+        %div( class="flex items-center justify-between" )
+          %div.mr-2
+            = render "components/checkbox"
 
-          %td( class="px-5 py-5 border-b border-gray-200 bg-white text-sm" )
-            = user.roles.map(&:name).join ", "
+          %div.w-full.mr-2
+            %div( class="text-sm leading-5 font-medium text-gray-900" )
+              = user.username
+            %div( class="text-sm leading-5 text-gray-500" )
+              = user.email
 
-          %td( class="px-5 py-5 border-b border-gray-200 bg-white text-sm" )= user.created_at.to_s(:long)
+          %div.w-full.mr-2.hidden( class="md:block" )
+            .flex
+              %strong.mr-1 Roles:
+              %ul
+                - user.roles.map(&:name).map(&:humanize).each do |role|
+                  %li= role
 
-          %td( class="px-5 py-5 border-b border-gray-200 bg-white text-sm" )
-            = link_to admin_user_path(user), class: "" do 
-              %i.expand.icon
-              View
+            .flex
+              %strong.mr-1 Created:
+              = render "components/time", time: user.created_at
 
-            -#.simple-dropdown
-              %button.simple-dropdown__trigger
-                %svg( viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="inline" )
-                  %line( x1="3" y1="12" x2="21" y2="12" )
-                  %line( x1="3" y1="6" x2="21" y2="6" )
-                  %line( x1="3" y1="18" x2="21" y2="18" )
+          %div
+            .flex.flex-row
+              = link_to admin_user_path(user), class: "" do 
+                %i.expand.icon
+                View
 
-              %ul.simple-dropdown__menu
-                %li
-                  %h6.simple-dropdown__header DangerZone
-                %li= link_to "Edit", edit_admin_user_path(user), class: "simple-dropdown__link"
-                %li.simple-dropdown__divider
-                %li.simple-dropdown__item test
+              .dropdown.dropdown--hoverable
+                = behavior_data "dropdown" do |dataset|
+                  %button.dropdown__trigger{ **dataset }
+                    %svg( viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="inline" )
+                      %line( x1="3" y1="12" x2="21" y2="12" )
+                      %line( x1="3" y1="6" x2="21" y2="6" )
+                      %line( x1="3" y1="18" x2="21" y2="18" )
 
-            .dropdown.dropdown--hoverable
-              %button.dropdown__trigger
-                %svg( viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="inline" )
-                  %line( x1="3" y1="12" x2="21" y2="12" )
-                  %line( x1="3" y1="6" x2="21" y2="6" )
-                  %line( x1="3" y1="18" x2="21" y2="18" )
+                .dropdown__container.hidden
+                  .dropdown__menu
+                    .dropdown__row
+                      %h6.dropdown__header DangerZone
+                      = link_to "Edit", edit_admin_user_path(user), class: "dropdown__link"
 
-              .dropdown__container.dropdown__container--closed
-                .dropdown__menu
-                  .dropdown__row
-                    %h6.dropdown__header DangerZone
-                    = link_to "Edit", edit_admin_user_path(user), class: "dropdown__link"
-
-    - else
-      %tr
-        %td( class="px-5 py-5 border-b border-gray-200 bg-white text-sm" colspan="4" )
-          No users yet (this might be a problem, yo)
+  - else
+    %li( class="px-5 py-5 border-b border-gray-200 bg-white text-sm" )
+      No users yet (this might be a problem, yo)
 
 = paginate @users
